# wreq

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE.md  RELEASE_NOTES  cliff.toml  release-plz.toml
.github/compilation-guide/: build.yml
.github/workflows/: ci.yml
bench/: http1.rs  http1_over_tls.rs  http2.rs  http2_over_tls.rs  support.rs
bench/support/: bench.rs  client.rs  rt.rs  server.rs
examples/: base_url.rs  cert_store.rs  client.rs  client_chain.rs  compressed_size.rs  connect_via_lower_priority_tokio_runtime.rs  emulation.rs  emulation_firefox.rs  emulation_provider.rs  emulation_twitter.rs  headers_order.rs  hickory_dns.rs  http1_recv_case_sensitive_headers.rs  http1_send_case_sensitive_headers.rs  http1_websocket.rs  http2_websocket.rs  impersonate.rs  impersonate_args.rs  impersonate_builder.rs  impersonate_config.rs  impersonate_settings.rs  impersonate_skip_headers.rs  json_dynamic.rs  json_typed.rs  keylog.rs  pre_configured_tls.rs  redirect_history.rs  request_with_emulate.rs  request_with_emulation.rs  request_with_interface.rs  request_with_local_address.rs  request_with_proxy.rs  request_with_redirect.rs  request_with_version.rs  rt.rs  set_cert_store.rs  set_cookie_provider.rs  set_cookies.rs  set_headers.rs  set_impersonate.rs  (+13 more)
src/: client.rs  config.rs  conn.rs  connect.rs  cookie.rs  dns.rs  error.rs  ext.rs  group.rs  hash.rs  header.rs  http1.rs  http2.rs  into_uri.rs  into_url.rs  lib.rs  proxy.rs  query.rs  redirect.rs  response.rs  retry.rs  rt.rs  sync.rs  tls.rs  trace.rs  tracing.rs  util.rs
src/client/: body.rs  client.rs  conn.rs  core.rs  decoder.rs  emulate.rs  emulation.rs  expect_continue.rs  future.rs  group.rs  http.rs  layer.rs  mod.rs  multipart.rs  request.rs  response.rs  rt.rs  upgrade.rs  ws.rs
src/client/client/: future.rs  macros.rs  mod.rs  service.rs  types.rs
src/client/config/: http1.rs  http2.rs
src/client/conn/: config.rs  connector.rs  descriptor.rs  group.rs  http.rs  tcp.rs  tls_info.rs  uds.rs  verbose.rs
src/client/conn/proxy/: tunnel.rs
src/client/conn/tcp/: compio.rs  tokio.rs
src/client/core/: body.rs  connect.rs  dispatch.rs  error.rs  http2.rs  proto.rs  rt.rs  upgrade.rs
src/client/core/body/: incoming.rs  length.rs  watch.rs
src/client/core/common/: buf.rs
src/client/core/conn/: http1.rs  http2.rs
src/client/core/connect/: capture.rs
src/client/core/ext/: config.rs
src/client/core/proto/: h2.rs  http1.rs  http2.rs  http3.rs
src/client/core/rt/: bounds.rs  compio.rs  timer.rs  tokio.rs
src/client/emulation/: chrome.rs  mod.rs
src/client/emulation/device/: firefox.rs  mod.rs  okhttp.rs  safari.rs
src/client/h3_client/: connect.rs  dns.rs  mod.rs  pool.rs
src/client/http/: aliases.rs  client.rs  connect.rs  future.rs  mod.rs  service.rs  types.rs
src/client/http/client/: error.rs  exec.rs  extra.rs  pool.rs
src/client/http/connect/: conn.rs  connector.rs  mod.rs  tls_info.rs  uds.rs  verbose.rs
src/client/hyper_util/: ext.rs  mod.rs
src/client/hyper_util/client/: mod.rs  pool.rs
src/client/hyper_util/common/: rewind.rs
src/client/hyper_util/rt/: mod.rs  tokio.rs
src/client/layer/: client.rs  config.rs  cookie.rs  decoder.rs  mod.rs  redirect.rs  retry.rs  timeout.rs
src/client/layer/client/: exec.rs  pool.rs
src/client/layer/config/: options.rs
src/client/layer/cookie/: future.rs  layer.rs
src/client/layer/redirect/: future.rs  mod.rs  policy.rs
src/client/layer/retry/: classify.rs  mod.rs  scope.rs
src/client/layer/timeout/: body.rs  future.rs  layer.rs  mod.rs
src/client/layer/wire_size/: body.rs  layer.rs  mod.rs
src/client/middleware/decoder/: layer.rs  mod.rs
src/client/middleware/redirect/: future.rs  mod.rs
src/client/middleware/retry/: mod.rs
src/client/middleware/timeout/: body.rs  future.rs  layer.rs  mod.rs
src/client/rt/: compio.rs
src/client/websocket/: json.rs  message.rs  mod.rs
src/client/ws/: compat.rs  message.rs  mod.rs
src/conn/: compio_io.rs  connector.rs  descriptor.rs  http.rs  info.rs  net.rs  opts.rs  tcp.rs  tls_info.rs  uds.rs
src/conn/net/: conn.rs  io.rs  tcp.rs  uds.rs
src/conn/net/conn/: compio.rs  (+1 more)
src/conn/proxy/: socks.rs  tunnel.rs
src/conn/tcp/: compio.rs  tokio.rs
src/cookie/: helper.rs  jar.rs  store.rs  value.rs
src/core/: mod.rs  upgrade.rs
src/core/body/: incoming.rs  length.rs  mod.rs
src/core/client/: dispatch.rs  dst.rs  future.rs  mod.rs  pool.rs  upgrade.rs
src/core/common/: mod.rs  task.rs
src/core/config/: http1.rs
src/core/ext/: config.rs  mod.rs  net.rs
src/core/header/: name.rs
src/core/map/: memo.rs
src/core/rt/: mod.rs  timer.rs  tokio.rs
src/dns/: compio.rs  gai.rs  hickory.rs  mod.rs  resolve.rs
src/dns/gai/: compio.rs  tokio.rs
src/imp/: chrome.rs  firefox.rs  macros.rs  mod.rs  okhttp.rs  safari.rs
src/mimic/: chrome.rs  firefox.rs  macros.rs  mod.rs  okhttp.rs  safari.rs
src/proxy/: mac.rs  matcher.rs  mod.rs  win.rs
src/tls/: compress.rs  config.rs  conn.rs  ctx.rs  ext.rs  extension.rs  keylog.rs  macros.rs  mod.rs  options.rs  session.rs  settings.rs  trust.rs  types.rs  x509.rs
src/tls/cert/: load.rs  mod.rs  store.rs
src/tls/certs/: store.rs
src/tls/conn/: boring.rs  cache.rs  ext.rs  layer.rs  macros.rs  mod.rs  service.rs
src/tls/connector/: mod.rs
src/tls/ext/: mod.rs
src/tls/extension/: mod.rs
src/tls/impersonate/: chrome.rs  edge.rs  firefox.rs  mod.rs  okhttp.rs  safari.rs
src/tls/keylog/: handle.rs  mod.rs
src/tls/mimic/: firefox.rs  macros.rs
src/tls/trust/: identity.rs  store.rs
src/tls/x509/: identity.rs  mod.rs  parser.rs  store.rs
src/util/: ext.rs  mod.rs
src/util/client/: dst.rs  mod.rs  network.rs  pool.rs  request.rs  scheme.rs
src/util/common/: exec.rs  mod.rs  rewind.rs  timer.rs
src/util/rt/: tokio.rs
tests/: badssl.rs  brotli.rs  client.rs  client_update.rs  compio.rs  connector_layers.rs  cookie.rs  deflate.rs  emulate.rs  emulation.rs  gzip.rs  layers.rs  multipart.rs  proxy.rs  redirect.rs  timeouts.rs  unix_socket.rs  upgrade.rs  zstd.rs
tests/support/: layer.rs
(+117 files in other folders)
